# sigil-interpreter

./: Cargo.toml  LICENSE.md  README.md
benches/: flamegraph_bench.rs  simple_bench.rs
docs/: opcodes.md
playground/: curry.sgl  error.sgl  fib.sgl  linklist.sgl  overflow.sgl  overload.sgl  print.sgl
src/: cli.rs  constant.rs  error.rs  functions.rs  lib.rs  main.rs  registry.rs  types.rs  value.rs
src/compiler/: compile.rs  compiler.rs  emit.rs  expr.rs  label.rs  lexer.rs  locals.rs  loop_tracker.rs  mod.rs  register.rs  stmt.rs  type_registry.rs  variables.rs
src/vm/: chunk.rs  exec.rs  frame.rs  heap.rs  mod.rs  opcode.rs  upvalue.rs
tests/: compile_error_tests.rs  expr_error_tests.rs  expr_tests.rs  function_tests.rs  lexer_tests.rs  modifier_tests.rs  stmt_error_tests.rs  stmt_tests.rs  struct_tests.rs  vm_tests.rs
tests/common/: mod.rs
