[package]
name = "sigil-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
ariadne = "0.6.0"
lasso = "0.7.3"
logos = "0.15"
num_enum = "0.7.6"
smallvec = "1.15.1"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "simple_bench"
harness = false
